// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileListScreenTemplate renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            {
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <RCTScrollView
          collapsable={false}
          handlerTag={1}
          handlerType="NativeViewGestureHandler"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "marginVertical": 8,
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
              theme={
                {
                  "animation": {
                    "scale": 1,
                  },
                  "colors": {
                    "accent": "#bcfeff",
                    "backdrop": "rgba(50, 47, 55, 0.4)",
                    "background": "#070724",
                    "elevation": {
                      "level0": "transparent",
                      "level1": "rgb(247, 243, 249)",
                      "level2": "rgb(243, 237, 246)",
                      "level3": "rgb(238, 232, 244)",
                      "level4": "rgb(236, 230, 243)",
                      "level5": "rgb(233, 227, 241)",
                    },
                    "error": "#ff4310",
                    "errorContainer": "rgba(249, 222, 220, 1)",
                    "inverseOnSurface": "rgba(244, 239, 244, 1)",
                    "inversePrimary": "rgba(208, 188, 255, 1)",
                    "inverseSurface": "rgba(49, 48, 51, 1)",
                    "onBackground": "rgba(28, 27, 31, 1)",
                    "onError": "rgba(255, 255, 255, 1)",
                    "onErrorContainer": "rgba(65, 14, 11, 1)",
                    "onPrimary": "rgba(255, 255, 255, 1)",
                    "onPrimaryContainer": "rgba(33, 0, 93, 1)",
                    "onSecondary": "rgba(255, 255, 255, 1)",
                    "onSecondaryContainer": "rgba(29, 25, 43, 1)",
                    "onSurface": "rgba(28, 27, 31, 1)",
                    "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
                    "onSurfaceVariant": "rgba(73, 69, 79, 1)",
                    "onTertiary": "rgba(255, 255, 255, 1)",
                    "onTertiaryContainer": "rgba(49, 17, 29, 1)",
                    "outline": "rgba(121, 116, 126, 1)",
                    "outlineVariant": "rgba(202, 196, 208, 1)",
                    "placeholder": "#ffffff",
                    "primary": "#00ffe6",
                    "primaryContainer": "rgba(234, 221, 255, 1)",
                    "scrim": "rgba(0, 0, 0, 1)",
                    "secondary": "rgba(98, 91, 113, 1)",
                    "secondaryContainer": "rgba(232, 222, 248, 1)",
                    "shadow": "rgba(0, 0, 0, 1)",
                    "surface": "rgba(255, 251, 254, 1)",
                    "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
                    "surfaceVariant": "rgba(231, 224, 236, 1)",
                    "tertiary": "rgba(125, 82, 96, 1)",
                    "tertiaryContainer": "rgba(255, 216, 228, 1)",
                    "text": "#ffffff",
                  },
                  "dark": false,
                  "fonts": {
                    "bodyLarge": {
                      "fontFamily": "System",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                    },
                    "bodyMedium": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                    },
                    "bodySmall": {
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 0.4,
                      "lineHeight": 16,
                    },
                    "default": {
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                    },
                    "displayLarge": {
                      "fontFamily": "System",
                      "fontSize": 57,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 64,
                    },
                    "displayMedium": {
                      "fontFamily": "System",
                      "fontSize": 45,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 52,
                    },
                    "displaySmall": {
                      "fontFamily": "System",
                      "fontSize": 36,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 44,
                    },
                    "headlineLarge": {
                      "fontFamily": "System",
                      "fontSize": 32,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 40,
                    },
                    "headlineMedium": {
                      "fontFamily": "System",
                      "fontSize": 28,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 36,
                    },
                    "headlineSmall": {
                      "fontFamily": "System",
                      "fontSize": 24,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    "labelLarge": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    "labelMedium": {
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "letterSpacing": 0.5,
                      "lineHeight": 16,
                    },
                    "labelSmall": {
                      "fontFamily": "System",
                      "fontSize": 11,
                      "fontWeight": "500",
                      "letterSpacing": 0.5,
                      "lineHeight": 16,
                    },
                    "titleLarge": {
                      "fontFamily": "System",
                      "fontSize": 22,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 28,
                    },
                    "titleMedium": {
                      "fontFamily": "System",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                    },
                    "titleSmall": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                  },
                  "isV3": true,
                  "roundness": 2,
                  "version": 3,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    false,
                    [
                      {
                        "paddingRight": 24,
                        "paddingVertical": 8,
                      },
                      {
                        "width": 0,
                      },
                    ],
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexDirection": "row",
                        "marginVertical": 6,
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text />
                  <View
                    style={
                      [
                        {
                          "paddingLeft": 16,
                        },
                        {
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                    }
                    testID="undefined-content"
                  >
                    <Text
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 16,
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                            },
                            [
                              {
                                "color": "#ffffff",
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                    >
                      Official Profile
                    </Text>
                    <Text
                      numberOfLines={2}
                      onTextLayout={[Function]}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 14,
                            },
                            {
                              "color": "rgba(73, 69, 79, 1)",
                            },
                            [
                              {
                                "color": "#9B9B9B",
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                    >
                      official.prof
                    </Text>
                  </View>
                  <View
                    color="rgba(73, 69, 79, 1)"
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text />
                    <Text />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ProfileListScreenTemplate renders with ja-JP locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            {
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <RCTScrollView
          collapsable={false}
          handlerTag={2}
          handlerType="NativeViewGestureHandler"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "marginVertical": 8,
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
              theme={
                {
                  "animation": {
                    "scale": 1,
                  },
                  "colors": {
                    "accent": "#bcfeff",
                    "backdrop": "rgba(50, 47, 55, 0.4)",
                    "background": "#070724",
                    "elevation": {
                      "level0": "transparent",
                      "level1": "rgb(247, 243, 249)",
                      "level2": "rgb(243, 237, 246)",
                      "level3": "rgb(238, 232, 244)",
                      "level4": "rgb(236, 230, 243)",
                      "level5": "rgb(233, 227, 241)",
                    },
                    "error": "#ff4310",
                    "errorContainer": "rgba(249, 222, 220, 1)",
                    "inverseOnSurface": "rgba(244, 239, 244, 1)",
                    "inversePrimary": "rgba(208, 188, 255, 1)",
                    "inverseSurface": "rgba(49, 48, 51, 1)",
                    "onBackground": "rgba(28, 27, 31, 1)",
                    "onError": "rgba(255, 255, 255, 1)",
                    "onErrorContainer": "rgba(65, 14, 11, 1)",
                    "onPrimary": "rgba(255, 255, 255, 1)",
                    "onPrimaryContainer": "rgba(33, 0, 93, 1)",
                    "onSecondary": "rgba(255, 255, 255, 1)",
                    "onSecondaryContainer": "rgba(29, 25, 43, 1)",
                    "onSurface": "rgba(28, 27, 31, 1)",
                    "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
                    "onSurfaceVariant": "rgba(73, 69, 79, 1)",
                    "onTertiary": "rgba(255, 255, 255, 1)",
                    "onTertiaryContainer": "rgba(49, 17, 29, 1)",
                    "outline": "rgba(121, 116, 126, 1)",
                    "outlineVariant": "rgba(202, 196, 208, 1)",
                    "placeholder": "#ffffff",
                    "primary": "#00ffe6",
                    "primaryContainer": "rgba(234, 221, 255, 1)",
                    "scrim": "rgba(0, 0, 0, 1)",
                    "secondary": "rgba(98, 91, 113, 1)",
                    "secondaryContainer": "rgba(232, 222, 248, 1)",
                    "shadow": "rgba(0, 0, 0, 1)",
                    "surface": "rgba(255, 251, 254, 1)",
                    "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
                    "surfaceVariant": "rgba(231, 224, 236, 1)",
                    "tertiary": "rgba(125, 82, 96, 1)",
                    "tertiaryContainer": "rgba(255, 216, 228, 1)",
                    "text": "#ffffff",
                  },
                  "dark": false,
                  "fonts": {
                    "bodyLarge": {
                      "fontFamily": "System",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                    },
                    "bodyMedium": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                    },
                    "bodySmall": {
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 0.4,
                      "lineHeight": 16,
                    },
                    "default": {
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                    },
                    "displayLarge": {
                      "fontFamily": "System",
                      "fontSize": 57,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 64,
                    },
                    "displayMedium": {
                      "fontFamily": "System",
                      "fontSize": 45,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 52,
                    },
                    "displaySmall": {
                      "fontFamily": "System",
                      "fontSize": 36,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 44,
                    },
                    "headlineLarge": {
                      "fontFamily": "System",
                      "fontSize": 32,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 40,
                    },
                    "headlineMedium": {
                      "fontFamily": "System",
                      "fontSize": 28,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 36,
                    },
                    "headlineSmall": {
                      "fontFamily": "System",
                      "fontSize": 24,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    "labelLarge": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    "labelMedium": {
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "letterSpacing": 0.5,
                      "lineHeight": 16,
                    },
                    "labelSmall": {
                      "fontFamily": "System",
                      "fontSize": 11,
                      "fontWeight": "500",
                      "letterSpacing": 0.5,
                      "lineHeight": 16,
                    },
                    "titleLarge": {
                      "fontFamily": "System",
                      "fontSize": 22,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 28,
                    },
                    "titleMedium": {
                      "fontFamily": "System",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                    },
                    "titleSmall": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                  },
                  "isV3": true,
                  "roundness": 2,
                  "version": 3,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    false,
                    [
                      {
                        "paddingRight": 24,
                        "paddingVertical": 8,
                      },
                      {
                        "width": 0,
                      },
                    ],
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexDirection": "row",
                        "marginVertical": 6,
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#ffffff",
                          "fontSize": 40,
                        },
                        undefined,
                        {
                          "fontFamily": "material-community",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    󰇗
                  </Text>
                  <View
                    style={
                      [
                        {
                          "paddingLeft": 16,
                        },
                        {
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                    }
                    testID="undefined-content"
                  >
                    <Text
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 16,
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                            },
                            [
                              {
                                "color": "#ffffff",
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                    >
                      Official Profile
                    </Text>
                    <Text
                      numberOfLines={2}
                      onTextLayout={[Function]}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 14,
                            },
                            {
                              "color": "rgba(73, 69, 79, 1)",
                            },
                            [
                              {
                                "color": "#9B9B9B",
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                    >
                      official.prof
                    </Text>
                  </View>
                  <View
                    color="rgba(73, 69, 79, 1)"
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      disabled={false}
                      onPress={[Function]}
                      selectable={false}
                      starred={false}
                      style={
                        [
                          {
                            "color": "#ffffff",
                            "fontSize": 25,
                          },
                          undefined,
                          {
                            "fontFamily": "material-community",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      󰓒
                    </Text>
                    <Text
                      allowFontScaling={false}
                      disabled={false}
                      onPress={[Function]}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#ffffff",
                            "fontSize": 25,
                          },
                          undefined,
                          {
                            "fontFamily": "material-community",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      󰆴
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ProfileListScreenTemplate shows filter menu when showFilter is true 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            {
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#4a2fba",
                "flex": 0.4,
              },
              {
                "width": 0,
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#bcfeff",
                "fontSize": 13,
              }
            }
          >
            Filter by Profile Type
          </Text>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "marginBottom": 12,
                },
                {
                  "width": 600,
                },
                [
                  {
                    "marginLeft": 20,
                    "marginRight": 20,
                    "marginTop": 4,
                  },
                  [
                    {
                      "width": 0,
                    },
                    {
                      "marginLeft": 0,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "flex": 1,
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityLiveRegion="polite"
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": true,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                color="rgba(28, 27, 31, 1)"
                container={
                  [
                    {
                      "marginLeft": 20,
                      "marginRight": 20,
                      "marginTop": 4,
                    },
                    [
                      {
                        "width": 0,
                      },
                      {
                        "marginLeft": 0,
                      },
                    ],
                  ]
                }
                description="Official iWinks' profiles."
                descriptionStyle={
                  [
                    {
                      "color": "#9B9B9B",
                      "fontSize": 10,
                    },
                    undefined,
                  ]
                }
                focusable={true}
                label="Show Official"
                labelPlace="right"
                labelStyle={
                  [
                    {
                      "color": "#ffffff",
                      "marginBottom": 0,
                    },
                    undefined,
                  ]
                }
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderRadius": 18,
                      "padding": 6,
                    },
                  ]
                }
                uncheckedColor="rgba(28, 27, 31, 1)"
              >
                <View
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    accessibilityElementsHidden={true}
                    allowFontScaling={false}
                    importantForAccessibility="no-hide-descendants"
                    pointerEvents="none"
                    selectable={false}
                    style={
                      [
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "fontSize": 24,
                        },
                        [
                          {
                            "lineHeight": 24,
                            "transform": [
                              {
                                "scaleX": 1,
                              },
                            ],
                          },
                          {
                            "backgroundColor": "transparent",
                          },
                        ],
                        {
                          "fontFamily": "material-community",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    󰄬
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 14,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "marginBottom": 0,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Show Official
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 14,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    [
                      {
                        "color": "#9B9B9B",
                        "fontSize": 10,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Official iWinks' profiles.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "marginBottom": 12,
                },
                {
                  "width": 600,
                },
                [
                  {
                    "marginLeft": 20,
                    "marginRight": 20,
                    "marginTop": 4,
                  },
                  [
                    {
                      "width": 0,
                    },
                    {
                      "marginLeft": 0,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "flex": 1,
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityLiveRegion="polite"
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                color="rgba(28, 27, 31, 1)"
                container={
                  [
                    {
                      "marginLeft": 20,
                      "marginRight": 20,
                      "marginTop": 4,
                    },
                    [
                      {
                        "width": 0,
                      },
                      {
                        "marginLeft": 0,
                      },
                    ],
                  ]
                }
                description="Community submitted profiles."
                descriptionStyle={
                  [
                    {
                      "color": "#9B9B9B",
                      "fontSize": 10,
                    },
                    undefined,
                  ]
                }
                focusable={true}
                label="Show Community"
                labelPlace="right"
                labelStyle={
                  [
                    {
                      "color": "#ffffff",
                      "marginBottom": 0,
                    },
                    undefined,
                  ]
                }
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderRadius": 18,
                      "padding": 6,
                    },
                  ]
                }
                uncheckedColor="rgba(28, 27, 31, 1)"
              >
                <View
                  style={
                    {
                      "opacity": 0,
                    }
                  }
                >
                  <Text
                    accessibilityElementsHidden={true}
                    allowFontScaling={false}
                    importantForAccessibility="no-hide-descendants"
                    pointerEvents="none"
                    selectable={false}
                    style={
                      [
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "fontSize": 24,
                        },
                        [
                          {
                            "lineHeight": 24,
                            "transform": [
                              {
                                "scaleX": 1,
                              },
                            ],
                          },
                          {
                            "backgroundColor": "transparent",
                          },
                        ],
                        {
                          "fontFamily": "material-community",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    󰄬
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 14,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "marginBottom": 0,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Show Community
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 14,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    [
                      {
                        "color": "#9B9B9B",
                        "fontSize": 10,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Community submitted profiles.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "marginBottom": 12,
                },
                {
                  "width": 600,
                },
                [
                  {
                    "marginLeft": 20,
                    "marginRight": 20,
                    "marginTop": 4,
                  },
                  [
                    {
                      "width": 0,
                    },
                    {
                      "marginLeft": 0,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "flex": 1,
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityLiveRegion="polite"
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": true,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                color="rgba(28, 27, 31, 1)"
                container={
                  [
                    {
                      "marginLeft": 20,
                      "marginRight": 20,
                      "marginTop": 4,
                    },
                    [
                      {
                        "width": 0,
                      },
                      {
                        "marginLeft": 0,
                      },
                    ],
                  ]
                }
                description="Your private profiles."
                descriptionStyle={
                  [
                    {
                      "color": "#9B9B9B",
                      "fontSize": 10,
                    },
                    undefined,
                  ]
                }
                focusable={true}
                label="Show Private"
                labelPlace="right"
                labelStyle={
                  [
                    {
                      "color": "#ffffff",
                      "marginBottom": 0,
                    },
                    undefined,
                  ]
                }
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderRadius": 18,
                      "padding": 6,
                    },
                  ]
                }
                uncheckedColor="rgba(28, 27, 31, 1)"
              >
                <View
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    accessibilityElementsHidden={true}
                    allowFontScaling={false}
                    importantForAccessibility="no-hide-descendants"
                    pointerEvents="none"
                    selectable={false}
                    style={
                      [
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "fontSize": 24,
                        },
                        [
                          {
                            "lineHeight": 24,
                            "transform": [
                              {
                                "scaleX": 1,
                              },
                            ],
                          },
                          {
                            "backgroundColor": "transparent",
                          },
                        ],
                        {
                          "fontFamily": "material-community",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    󰄬
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 14,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "marginBottom": 0,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Show Private
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 14,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    [
                      {
                        "color": "#9B9B9B",
                        "fontSize": 10,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Your private profiles.
              </Text>
            </View>
          </View>
        </View>
        <RCTScrollView
          collapsable={false}
          handlerTag={4}
          handlerType="NativeViewGestureHandler"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "marginVertical": 8,
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
              theme={
                {
                  "animation": {
                    "scale": 1,
                  },
                  "colors": {
                    "accent": "#bcfeff",
                    "backdrop": "rgba(50, 47, 55, 0.4)",
                    "background": "#070724",
                    "elevation": {
                      "level0": "transparent",
                      "level1": "rgb(247, 243, 249)",
                      "level2": "rgb(243, 237, 246)",
                      "level3": "rgb(238, 232, 244)",
                      "level4": "rgb(236, 230, 243)",
                      "level5": "rgb(233, 227, 241)",
                    },
                    "error": "#ff4310",
                    "errorContainer": "rgba(249, 222, 220, 1)",
                    "inverseOnSurface": "rgba(244, 239, 244, 1)",
                    "inversePrimary": "rgba(208, 188, 255, 1)",
                    "inverseSurface": "rgba(49, 48, 51, 1)",
                    "onBackground": "rgba(28, 27, 31, 1)",
                    "onError": "rgba(255, 255, 255, 1)",
                    "onErrorContainer": "rgba(65, 14, 11, 1)",
                    "onPrimary": "rgba(255, 255, 255, 1)",
                    "onPrimaryContainer": "rgba(33, 0, 93, 1)",
                    "onSecondary": "rgba(255, 255, 255, 1)",
                    "onSecondaryContainer": "rgba(29, 25, 43, 1)",
                    "onSurface": "rgba(28, 27, 31, 1)",
                    "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
                    "onSurfaceVariant": "rgba(73, 69, 79, 1)",
                    "onTertiary": "rgba(255, 255, 255, 1)",
                    "onTertiaryContainer": "rgba(49, 17, 29, 1)",
                    "outline": "rgba(121, 116, 126, 1)",
                    "outlineVariant": "rgba(202, 196, 208, 1)",
                    "placeholder": "#ffffff",
                    "primary": "#00ffe6",
                    "primaryContainer": "rgba(234, 221, 255, 1)",
                    "scrim": "rgba(0, 0, 0, 1)",
                    "secondary": "rgba(98, 91, 113, 1)",
                    "secondaryContainer": "rgba(232, 222, 248, 1)",
                    "shadow": "rgba(0, 0, 0, 1)",
                    "surface": "rgba(255, 251, 254, 1)",
                    "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
                    "surfaceVariant": "rgba(231, 224, 236, 1)",
                    "tertiary": "rgba(125, 82, 96, 1)",
                    "tertiaryContainer": "rgba(255, 216, 228, 1)",
                    "text": "#ffffff",
                  },
                  "dark": false,
                  "fonts": {
                    "bodyLarge": {
                      "fontFamily": "System",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                    },
                    "bodyMedium": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                    },
                    "bodySmall": {
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 0.4,
                      "lineHeight": 16,
                    },
                    "default": {
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                    },
                    "displayLarge": {
                      "fontFamily": "System",
                      "fontSize": 57,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 64,
                    },
                    "displayMedium": {
                      "fontFamily": "System",
                      "fontSize": 45,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 52,
                    },
                    "displaySmall": {
                      "fontFamily": "System",
                      "fontSize": 36,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 44,
                    },
                    "headlineLarge": {
                      "fontFamily": "System",
                      "fontSize": 32,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 40,
                    },
                    "headlineMedium": {
                      "fontFamily": "System",
                      "fontSize": 28,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 36,
                    },
                    "headlineSmall": {
                      "fontFamily": "System",
                      "fontSize": 24,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    "labelLarge": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    "labelMedium": {
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "letterSpacing": 0.5,
                      "lineHeight": 16,
                    },
                    "labelSmall": {
                      "fontFamily": "System",
                      "fontSize": 11,
                      "fontWeight": "500",
                      "letterSpacing": 0.5,
                      "lineHeight": 16,
                    },
                    "titleLarge": {
                      "fontFamily": "System",
                      "fontSize": 22,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 28,
                    },
                    "titleMedium": {
                      "fontFamily": "System",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                    },
                    "titleSmall": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                  },
                  "isV3": true,
                  "roundness": 2,
                  "version": 3,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    false,
                    [
                      {
                        "paddingRight": 24,
                        "paddingVertical": 8,
                      },
                      {
                        "width": 0,
                      },
                    ],
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexDirection": "row",
                        "marginVertical": 6,
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#ffffff",
                          "fontSize": 40,
                        },
                        undefined,
                        {
                          "fontFamily": "material-community",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    󰇗
                  </Text>
                  <View
                    style={
                      [
                        {
                          "paddingLeft": 16,
                        },
                        {
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                    }
                    testID="undefined-content"
                  >
                    <Text
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 16,
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                            },
                            [
                              {
                                "color": "#ffffff",
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                    >
                      Official Profile
                    </Text>
                    <Text
                      numberOfLines={2}
                      onTextLayout={[Function]}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 14,
                            },
                            {
                              "color": "rgba(73, 69, 79, 1)",
                            },
                            [
                              {
                                "color": "#9B9B9B",
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                    >
                      official.prof
                    </Text>
                  </View>
                  <View
                    color="rgba(73, 69, 79, 1)"
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      disabled={false}
                      onPress={[Function]}
                      selectable={false}
                      starred={false}
                      style={
                        [
                          {
                            "color": "#ffffff",
                            "fontSize": 25,
                          },
                          undefined,
                          {
                            "fontFamily": "material-community",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      󰓒
                    </Text>
                    <Text
                      allowFontScaling={false}
                      disabled={false}
                      onPress={[Function]}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#ffffff",
                            "fontSize": 25,
                          },
                          undefined,
                          {
                            "fontFamily": "material-community",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      󰆴
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
